--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<div>
+<div style="position: fixed; z-index:99999; left: 0px; top: 60%;">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Launch demo modal
     </button>
